# light-parser

./: CMakeLists.txt  LICENSE  README.md  main.cpp  readme.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
examples/calc_parser/: CMakeLists.txt  calc_parser.h  main.cpp
examples/calc_parser/test/: CMakeLists.txt  calc_test.cpp
examples/customizable_tokens_parser/: CMakeLists.txt  ast_node.h  lexer.h  main.cpp
examples/json_parser/: CMakeLists.txt  lexer.h  main.cpp
examples/sax_xml_parser/: CMakeLists.txt  main.cpp  sax.h
examples/sax_xml_parser/test/: CMakeLists.txt  sax_xml_test.cpp
examples/xml_parser/: CMakeLists.txt  main.cpp  test.txt  xml_def.h
examples/xml_parser_with_ctx/: CMakeLists.txt  dataset.xml  main.cpp  test.txt  xml_def.h
include/: base_parser.h  compile_time_parser.h  compiler_time_parser.h  error_handler.h  parser.h  runtime_parser.h  token_stream.h  traits.h
include/pkuyo/: base_parser.h  compile_time_parser.h  parser.h  runtime_parser.h  traits.h
test/: CMakeLists.txt  parser_test.cpp
